[gd_scene load_steps=29 format=2]

[ext_resource path="res://GAME/CAMERA/cam_player.gd" type="Script" id=1]
[ext_resource path="res://GAME/UNITS/player_unit.tscn" type="PackedScene" id=2]
[ext_resource path="res://DATA/ABILITIES/ability_example.gd" type="Script" id=3]
[ext_resource path="res://UI/HEALTHBAR/ui.gd" type="Script" id=4]
[ext_resource path="res://UI/other/dev.gd" type="Script" id=5]
[ext_resource path="res://GAME/UNITS/unit.tscn" type="PackedScene" id=6]
[ext_resource path="res://Splash_Screen.tscn" type="PackedScene" id=7]
[ext_resource path="res://DATA/ABILITIES/fireball.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/PLAYER_UI/ui_abilities.gd" type="Script" id=9]
[ext_resource path="res://DATA/ABILITIES/self_heal.tscn" type="PackedScene" id=10]
[ext_resource path="res://DATA/ABILITIES/self_damage.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/PLAYER_UI/player_statuses.gd" type="Script" id=12]
[ext_resource path="res://UI/PLAYER_UI/unit_details.tscn" type="PackedScene" id=13]
[ext_resource path="res://DATA/ABILITIES/ABILITY_CAST.gd" type="Script" id=14]
[ext_resource path="res://trail.gd" type="Script" id=15]
[ext_resource path="res://UI/HEALTHBAR/healthbar_floating.tscn" type="PackedScene" id=16]
[ext_resource path="res://UI/other/cursor_dot.png" type="Texture" id=17]
[ext_resource path="res://cursor.gd" type="Script" id=18]
[ext_resource path="res://fps.gd" type="Script" id=19]
[ext_resource path="res://Transition_Manager.gd" type="Script" id=20]
[ext_resource path="res://LEVEL_HANDLER.gd" type="Script" id=21]
[ext_resource path="res://menu_system.gd" type="Script" id=22]
[ext_resource path="res://network.gd" type="Script" id=23]
[ext_resource path="res://GAME/PLAYER/player_controls.gd" type="Script" id=24]
[ext_resource path="res://Lobby.gd" type="Script" id=25]
[ext_resource path="res://icon.png" type="Texture" id=26]
[ext_resource path="res://GAMELOOP.gd" type="Script" id=27]

[sub_resource type="Curve" id=1]
max_value = 0.5
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[node name="main" type="Node"]

[node name="abilities" type="Node" parent="."]

[node name="fireball" parent="abilities" instance=ExtResource( 8 )]

[node name="self_heal" parent="abilities" instance=ExtResource( 10 )]

[node name="self_damage" parent="abilities" instance=ExtResource( 11 )]

[node name="ability_example" type="Node" parent="abilities"]
script = ExtResource( 3 )

[node name="ABILITY_CAST" type="Node" parent="abilities"]
script = ExtResource( 14 )

[node name="GAMELOOP" type="Node" parent="."]
script = ExtResource( 27 )

[node name="SERVER" type="Node2D" parent="."]

[node name="Units" type="Node2D" parent="SERVER"]

[node name="Users" type="Node2D" parent="SERVER"]

[node name="CLIENT" type="Node2D" parent="."]
visible = false
script = ExtResource( 21 )

[node name="LEVEL_LAYER" type="Node2D" parent="CLIENT"]

[node name="units" type="Node2D" parent="CLIENT"]

[node name="unit" parent="CLIENT/units" instance=ExtResource( 6 )]
position = Vector2( 342, -158 )

[node name="unit2" parent="CLIENT/units" instance=ExtResource( 6 )]
position = Vector2( 181, -302 )

[node name="player_unit" parent="CLIENT/units" instance=ExtResource( 2 )]
position = Vector2( -126, -117 )

[node name="cam_static" type="Camera2D" parent="CLIENT"]
visible = false

[node name="cam_player" type="Camera2D" parent="CLIENT"]
current = true
script = ExtResource( 1 )

[node name="Menus" type="CanvasLayer" parent="."]
script = ExtResource( 22 )

[node name="MENU" type="Control" parent="Menus"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="INGAME" type="Control" parent="Menus/MENU"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="abilities" type="Control" parent="Menus/MENU/INGAME"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -64.0
margin_right = 32.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 64 )
script = ExtResource( 9 )

[node name="dev" type="Control" parent="Menus/MENU/INGAME"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="max_health_add" type="Button" parent="Menus/MENU/INGAME/dev"]
margin_right = 12.0
margin_bottom = 20.0
text = "+50MXHP"

[node name="max_health_remove" type="Button" parent="Menus/MENU/INGAME/dev"]
margin_left = 84.0
margin_right = 155.0
margin_bottom = 20.0
text = "-50MXHP"

[node name="blank" type="Button" parent="Menus/MENU/INGAME/dev"]
margin_left = 144.0
margin_right = 215.0
margin_bottom = 20.0
text = "----"

[node name="healthbar" parent="Menus/MENU/INGAME/dev" instance=ExtResource( 16 )]

[node name="server" type="Button" parent="Menus/MENU/INGAME/dev"]
margin_left = 50.0
margin_top = 50.0
margin_right = 62.0
margin_bottom = 70.0
text = "server"

[node name="client" type="Button" parent="Menus/MENU/INGAME/dev"]
margin_left = 50.0
margin_top = 80.0
margin_right = 62.0
margin_bottom = 100.0
text = "client"

[node name="both" type="Button" parent="Menus/MENU/INGAME/dev"]
margin_left = 50.0
margin_top = 110.0
margin_right = 62.0
margin_bottom = 130.0
text = "both"

[node name="dev_output" type="RichTextLabel" parent="Menus/MENU/INGAME/dev"]
margin_left = 50.0
margin_top = 140.0
margin_right = 622.0
margin_bottom = 406.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MENU/INGAME/dev"]
margin_left = 700.0
margin_top = 300.0
margin_right = 782.0
margin_bottom = 340.0

[node name="Button" type="Button" parent="Menus/MENU/INGAME/dev/VBoxContainer"]
margin_right = 82.0
margin_bottom = 20.0
text = "set_rounds"

[node name="player_statuses" type="HFlowContainer" parent="Menus/MENU/INGAME"]
visible = false
margin_left = 28.0
margin_top = 524.0
margin_right = 156.0
margin_bottom = 540.0
grow_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
script = ExtResource( 12 )

[node name="healthbars" type="Control" parent="Menus/MENU/INGAME"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="map" type="Control" parent="Menus/MENU/INGAME"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 944.0
margin_right = 984.0
margin_bottom = 40.0

[node name="unit_details2" parent="Menus/MENU/INGAME" instance=ExtResource( 13 )]
margin_left = 9.0
margin_top = 462.0
margin_right = 265.0
margin_bottom = 590.0

[node name="game_info" type="Control" parent="Menus/MENU/INGAME"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 472.0
margin_right = 512.0
margin_bottom = 40.0
grow_horizontal = 2

[node name="Splash_Screen" parent="Menus/MENU" instance=ExtResource( 7 )]

[node name="Lobby" type="Control" parent="Menus"]
margin_left = 600.0
margin_top = 200.0
margin_right = 953.0
margin_bottom = 399.0
mouse_filter = 2

[node name="list" type="RichTextLabel" parent="Menus/Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Player_Card" type="Control" parent="Menus"]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 0.1
margin_top = 16.0
margin_right = -16.0
grow_horizontal = 0

[node name="Panel" type="Panel" parent="Menus/Player_Card"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="pfp" type="Control" parent="Menus/Player_Card/Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="icon" type="Sprite" parent="Menus/Player_Card/Panel/pfp"]
position = Vector2( 32, 24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 26 )

[node name="Label" type="Label" parent="Menus/Player_Card/Panel"]
margin_left = 70.0
margin_top = 15.0
margin_right = 140.0
margin_bottom = 29.0
text = "user_name"

[node name="Transition_Manager" type="CanvasLayer" parent="."]
script = ExtResource( 20 )

[node name="Mouse" type="CanvasLayer" parent="."]

[node name="fps" type="Label" parent="Mouse"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 14.0
grow_horizontal = 0
script = ExtResource( 19 )

[node name="trail" type="Line2D" parent="Mouse"]
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 0.313726 )
script = ExtResource( 15 )

[node name="cursor" type="Node2D" parent="Mouse"]
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="Mouse/cursor"]
texture = ExtResource( 17 )

[node name="network" type="Node" parent="."]
script = ExtResource( 23 )

[node name="Lobby" type="Node" parent="network"]
script = ExtResource( 25 )

[node name="player_controls" type="Node2D" parent="."]
script = ExtResource( 24 )

[connection signal="pressed" from="Menus/MENU/INGAME/dev/max_health_add" to="Menus/MENU/INGAME/dev" method="_on_max_health_add_pressed"]
[connection signal="pressed" from="Menus/MENU/INGAME/dev/max_health_remove" to="Menus/MENU/INGAME/dev" method="_on_max_health_remove_pressed"]
[connection signal="pressed" from="Menus/MENU/INGAME/dev/server" to="network" method="_on_server_pressed"]
[connection signal="pressed" from="Menus/MENU/INGAME/dev/client" to="network" method="_on_client_pressed"]
[connection signal="pressed" from="Menus/MENU/INGAME/dev/both" to="network" method="_on_both_pressed"]
[connection signal="pressed" from="Menus/MENU/INGAME/dev/VBoxContainer/Button" to="Menus/MENU/INGAME/dev" method="_on_Button_pressed"]
